chore(ui): minor ux tweaks

--- a/www/forte.html
+++ b/www/forte.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="center hidden" id="form">
-    <h1>Запиши ответы</h1>
+    <h1>Впиши ответы</h1>
 
     <input type="text" id="1st" name="1st">
     <input type="text" id="2nd" name="2nd">
@@ -24,7 +24,7 @@
     <input type="text" id="10th" name="10th">
     <input type="text" id="11th" name="11th">
 
-    <button class="submit" onclick="submit()">Отправить результаты</button>
+    <button class="submit" onclick="submit()">Проверить</button>
   </div>
 
   <div class="center hidden" id="results">
